# dojutsu-for-ai

./: .gitignore  CHANGELOG.md  README.fr.md  README.md  RELEASE_v1.1.0b1.md  allpath.expose.json  colab_deploy.py  deploy_colab.py  deploy_skills.py  pyproject.toml
.github/workflows/: auto_release.yml  ci.yml
examples/: DojutsuClient.cs  DojutsuClient.java  README.md  client.php  client.rb  go.go  rust.rs  typescript.ts
providers/dojutsu-agent/: allpath.expose.json  main.py
providers/senjutsu-agent/: allpath.expose.json  main.py
scripts/: detect_release.sh  extract_changelog.sh
senjutsu/: __init__.py  __main__.py  agent.py  client.py  main.py
senjutsu/core/: __init__.py  byakugan.py  jougan.py  mode_sage.py  pipeline.py  rag_booster.py  security.py
senjutsu/providers/senjutsu-agent/: allpath.expose.json  main.py
senjutsu/skills/: __init__.py  loader.py
senjutsu/skills/abp-net-development-rules/: SKILL.md
senjutsu/skills/actix-web/: SKILL.md
senjutsu/skills/additional-resources/: SKILL.md
senjutsu/skills/agent-framework/: SKILL.md
senjutsu/skills/agent-framework-azure-ai-py/: SKILL.md
senjutsu/skills/agents-v2-py/: SKILL.md
senjutsu/skills/ai-system-prompt-for-master-python-programmer/: SKILL.md
senjutsu/skills/aiohttp/: SKILL.md
senjutsu/skills/algorithmic-art/: SKILL.md
senjutsu/skills/amazon-ec2/: SKILL.md
senjutsu/skills/amazon-s3/: SKILL.md
senjutsu/skills/android-jetpack-compose-cursorrules-prompt-file/: SKILL.md
senjutsu/skills/android-sdk/: SKILL.md
senjutsu/skills/angular/: SKILL.md
senjutsu/skills/angular-general/: SKILL.md
senjutsu/skills/angular-typescript-cursorrules-prompt-file/: SKILL.md
senjutsu/skills/ansible/: SKILL.md
senjutsu/skills/ant-design/: SKILL.md
senjutsu/skills/api_security/: SKILL.md  __init__.py
senjutsu/skills/apollo-client/: SKILL.md
senjutsu/skills/apollo-graphql/: SKILL.md
senjutsu/skills/appinsights-instrumentation/: SKILL.md
senjutsu/skills/asp-net/: SKILL.md
senjutsu/skills/astro/: SKILL.md
senjutsu/skills/astro-general/: SKILL.md
senjutsu/skills/astro-typescript-cursorrules-prompt-file/: SKILL.md
senjutsu/skills/async_systems/: SKILL.md  __init__.py
senjutsu/skills/auth0/: SKILL.md
senjutsu/skills/auth_jwt/: SKILL.md
senjutsu/skills/autogen/: SKILL.md
senjutsu/skills/aws/: SKILL.md
senjutsu/skills/aws-amplify/: SKILL.md
senjutsu/skills/aws-dynamodb/: SKILL.md
senjutsu/skills/aws-ecs/: SKILL.md
senjutsu/skills/aws-lambda/: SKILL.md
senjutsu/skills/aws-rds/: SKILL.md
senjutsu/skills/axios/: SKILL.md
senjutsu/skills/bash/: SKILL.md
tests/: test_senjutsu.py
tests/benchmarks/: 001_async_job_queue.md  README.md
tools/: skills_harvester.py
(+542 files in other folders)
