[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senjutsu"
version = "1.0.0b1"
description = "Precision Absolute AI Coding Agent — Byakugan × Mode Sage × Jōgan × RAG Booster"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daouda Abdoul Anzize", email = "anzize.contact@proton.me"},
]
keywords = [
    "ai", "coding-agent", "llm", "rag", "byakugan", "senjutsu",
    "precision-absolute", "allpath", "code-generation", "dev-expert"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "groq>=0.9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage      = "https://github.com/Tryboy869/senjutsu-coding-agent"
Repository    = "https://github.com/Tryboy869/senjutsu-coding-agent"
Documentation = "https://github.com/Tryboy869/senjutsu-coding-agent#readme"
"Bug Tracker" = "https://github.com/Tryboy869/senjutsu-coding-agent/issues"

[project.scripts]
senjutsu = "senjutsu.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["senjutsu"]
include = [
    "senjutsu/**",
    "senjutsu/skills/**",
    "assets/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "/senjutsu",
    "/assets",
    "/tests",
    "/README.md",
    "/README.fr.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/allpath.expose.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version       = "3.8"
strict               = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["senjutsu"]
omit   = [
    "tests/*",
    "senjutsu/__main__.py",
    "senjutsu/main.py",
    "senjutsu/client.py",
    "senjutsu/skills/loader.py",
    "senjutsu/skills/*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main",
]
